<resources>
    <string name="app_name">EXPO2020</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <!-- Translatable resources -->
    <string name="menu_filter_by_grow_zone">Filter by grow zone</string>
    <string name="pavilion_detail_image_content_description">Image of pavilion</string>
    <string name="my_list_title">My Pavilions List</string>
    <string name="pavilion_list_title">Pavilion list</string>
    <string name="available">Available Pavilions</string>
    <string name="pavilion_details_title">Pavilion details</string>
    <string name="add_pavilion">Add New Pavilion</string>
    <string name="added_pavilion_to_list">Added Pavilion to Favourite List</string>
    <string name="list_empty">Your favourite list is empty</string>
    <string name="pavilion_date_header">Added</string>
    <string name="visited_date_header">Last Visited</string>
    <string name="menu_item_share_pavilion">Share</string>
    <string name="share_text_pavilion">Check out the %s pavilion in the app</string>

    <!-- String plurals and their related prefix / suffix strings -->
    <string name="visiting_prefix" translation_description="Prefix for the text describing how often a plant should be watered. Used in combination with watering_needs_suffix.">Opening soon!</string>
    <plurals name="visiting_suffix">
        <item quantity="one" translation_description="Suffix for the text describing when pavilion should be visited, singular.">every day</item>
        <item quantity="other" translation_description="Suffix for the text describing when pavilion should be visited, plural.">in %d days</item>
    </plurals>

    <plurals name="watering_next">
        <item quantity="one" translation_description="Text indicating when the the Pavilion should next be visited, singular. Used in conjunction with last visited date.">Visit tomorrow.</item>
        <item quantity="other" translation_description="Text indicating when the the Pavilion should next be visited, plural. Used in conjunction with last visited date.">Visit in %d days.</item>
    </plurals>

    <!-- Accessibility -->
    <string name="a11y_pavilion_item_image" translation_description="Accessibility text for each of the pavilion images shown in the 'My List' and 'Pavilion list' screens.">Picture of pavilion</string>
    <string name="empty_string" />

    <string name="expanded" translation_description="The label used on a button when a view is in an expanded state.">Expanded</string>
    <string name="collapsed" translation_description="The label used on a button when a view is in an collapsed state.">Collapsed</string>

    <!-- AboutExpo FAQ Activity -->
    <string name="what_is_world_expo">World Expos are one of the oldest and largest international events on the planet, taking place every five years and lasting six months. It is a festival for all, where everyone can experience, explore, innovate, and have fun by sharing ideas and working together. Innovations launched at World Expos include: the telephone (Philadelphia, 1876), the Eiffel Tower (Paris, 1889), the Ferris wheel (Chicago, 1893), the X-Ray machine (Buffalo, 1901), the ice cream cone (St Louis, 1904), the commercial broadcast television (New York, 1939), IMAX (Osaka, 1970), touchscreens (Knoxville, 1982) and the humanoid robot (Nagoya, 2005).</string>
    <string name="what_is_expo2020">Expo 2020 Dubai will be the first World Expo ever hosted in the Middle East, Africa and South Asia (MEASA) region. Expo 2020 is expected to attract 25 million visits, with 70 per cent of visitors projected to come from outside the UAE – the largest proportion of international visitors in the 168-year history of World Expos.</string>
    <string name="who_is_participating_in_expo">There will be more than 200 participants including nations, multilateral organisations, businesses and educational institutions. To date, 190 nations from across the world have confirmed their participation at Expo 2020.</string>
    <string name="when_is_expo_starting">Expo 2020 will run for six months from 20 October, 2020 to 10 April, 2021. It will be open seven days a week, from 1000 to 0100 on weekdays and 1000 to 0200 on weekends and special days.</string>
    <string name="where_is_expo">Measuring 4.38 sqkm, the Expo 2020 site is located in the Dubai South district. It is close to Al Maktoum International Airport and within easy reach of Dubai International Airport, Abu Dhabi International Airport and Dubai and Abu Dhabi Cruise Terminals. The site will also have its own metro station, capable of transporting 36,000 passengers per hour.</string>
    <string name="what_will_happen_after_expo">In line with the Expo 2020 subtheme of Sustainability, 80 per cent of Expo-built buildings and structures will find new life in the thriving future city of District 2020. A key pillar of Expo 2020’s aim to leave a meaningful and lasting legacy, District 2020 will be a connected global centre for the next generation of innovators, original thinkers and pioneers for generations to come.</string>
    <string name="is_safe_in_dubai">Absolutely. In fact, according to a study by the UK-based Which? Travel magazine, released in November 2018, the UAE is the world’s second safest place to visit after Iceland.</string>
    <string name="what_is_official_religion_uae">Islam is the official religion, but the UAE Constitution provides for freedom of religion in accordance with established custom. Visitors and residents are free to practise their religious beliefs, and can find places of worship such as churches and Hindu temples throughout the country.</string>
    <string name="what_to_wear">The UAE’s sunny climate means that lightweight clothing is suitable to wear throughout the year. However, slightly warmer attire such as a jumper may be needed during wintertime or in a place with powerful air conditioning (for example, a cinema or a hotel lobby). When out in public, dress codes are generally relaxed but it is still a good idea to respect the local culture – excessively tight or revealing clothing is inadvisable, especially in family-friendly environments such as malls and restaurants.</string>
    <string name="how_to_take_part_in_expo">There are many ways in which you can participate. The Expo Live programme offers support and funding to those with creative solutions to global challenges, the Expo 2020 Volunteers programme is welcoming more than 30,000 volunteers, the World Majlis sessions bring together current and aspiring thought leaders from across the planet, and a wide range of business opportunities are available at the Online Marketplace.</string>
    <string name="people_of_determination">Under the UAE’s National Policy for Empowering People with Special Needs, those with special needs or disabilities are referred to as ‘people of determination’ to recognise their achievements in different fields. Expo 2020 is currently considering a wide range of measures to ensure we deliver an accessible Expo for everyone. A variety of services will be offered onsite, including rentals of wheelchairs and electric convenience vehicles.</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="login_text">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_yet_register_now">No account yet? Register now!</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>

</resources>