<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="viewModel"
            type="elmir.vip.individualproject.ui.home.pavilions.viewmodels.PavilionSelectionsViewModel"/>
    </data>

    <elmir.vip.individualproject.ui.home.pavilions.views.MaskedCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_side_margin"
        android:layout_marginEnd="@dimen/card_side_margin"
        android:layout_marginBottom="@dimen/card_bottom_margin"
        android:onClick="@{clickListener}"
        app:cardElevation="@dimen/card_elevation"
        app:cardPreventCornerOverlap="false"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Pavilion.Card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="@dimen/pavilion_item_image_height"
                android:contentDescription="@string/a11y_pavilion_item_image"
                android:scaleType="centerCrop"
                app:imageFromUrl="@{viewModel.imageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pavilion_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@{viewModel.pavilionName}"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView"/>

            <TextView
                android:id="@+id/p_date_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/pavilion_date_header"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pavilion_name"/>

            <TextView
                android:id="@+id/p_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@{viewModel.pavilionDateString}"
                android:gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/p_date_header"/>

            <TextView
                android:id="@+id/visited_date_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/visited_date_header"
                android:textStyle="bold"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorAccent"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/p_date"/>

            <TextView
                android:id="@+id/v_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@{viewModel.visitDateString}"
                android:gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visited_date_header" />

            <TextView
                android:id="@+id/v_interval"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@{@plurals/watering_next(viewModel.visitInterval, viewModel.visitInterval)}"
                android:gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_date"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </elmir.vip.individualproject.ui.home.pavilions.views.MaskedCardView>

</layout>